--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -5,8 +5,6 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: #121212;
-    color: #f9fafc;
 }
 
 .input-group {
@@ -77,4 +75,22 @@
     margin-left: 8px;
     border-radius: 12px;
     transition: all 0.3s ease;
+}
+
+.heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 48px;
+}
+
+.tagline {
+    font-size: 32px;
+    margin: 0;
+}
+
+.sub {
+    font-size: 16px;
+    color: #909090;
 }
