--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,4 +4,6 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: #f9fafc;
 }
