--- a/frontend/src/components/AuthPage.css
+++ b/frontend/src/components/AuthPage.css
@@ -216,3 +216,8 @@ input[type="radio"] {
     margin-top: 16px;
     margin-left: 4px;
 }
+
+.form-check-input:checked {
+    background-color: #7E57C2;
+    border-color: #7E57C2;
+}
